
===v8.5.1===
====Bug Fixes====
* Fixed #1509 - "Couldn't open Interface/AddOns/TellMeWhen_Options/"
* Fixed #1507 - Attempt to register unknown event "UNIT_VEHICLE"


===v8.5.0===
* Battle For Azeroth support. Please report bugs to https://wow.curseforge.com/projects/tellmewhen/issues. 
** I especially need help with the spell equivalencies (e.g. "Stunned", "DefensiveBuffs", etc.)
** If you notice spells that are missing or that shouldn't be there, please let me know!

===v8.4.5===
* Fixes for upcoming changes to ElvUI's cooldown timer texts.

===v8.4.4===
* TellMeWhen_Options no longer saves a spell cache to disk. Performance improvements have made it feasible to compute this each time you log in as it needed, resulting in faster log-in/log-out times.

====Bug Fixes====
* Fixed additional dropdown scaling issues.
* Added error messages for invalid import strings.

===v8.4.3===
* Updates for Allied Races.
* Minor options UI improvements.
* Added options to disable TMW's built-in settings backup and the "backup" import source.

===v8.4.2===
* Version bump & additional fixes for patch 7.3.0.

===v8.4.1===
* Compatibility updates for patch 7.3.0.
* The Guardian icon type (Warlock) now has sort settings.
* Added Light's Hammer tracking to the totem/Consecration icon type.
* Added Soul Shard fragment tracking to conditions & Resource Display icons.
* Increased Astral Power condition cap to 130.
* Added newer drums to the BurstHaste equivalency.

====Bug Fixes====
* Fixed dropdown scaling issues.

===v8.4.0===
* Compatibility updates for patch 7.2.5.

===v8.3.3===
====Bug Fixes====
 * Fixed the Equipment set equipped condtion.

===v8.3.2===
 * Version bump for Patch 7.2.

===v8.3.1===
 * Added a Spell Activation Overlay condition.
 
====Bug Fixes====
 * Lua conditions should once again properly resolve members defined in TMW.CNDT.Env.

===v8.3.0===
 * New setting for Reactive Ability icons: Require activation border. 